<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="team_a">Team A</string>
    <string name="hyphen">-</string>
    <string name="team_b">Team B</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="zero">0</string>
    <string name="touchdown">Touchdown</string>
    <string name="plus_six">+6</string>
    <string name="field_goal">Field Goal</string>
    <string name="plus_three">+3</string>
    <string name="plus_one">+1</string>
    <string name="plus_two">+2</string>
    <string name="extra_point">Extra Point</string>
    <string name="safety">Safety</string>
    <string name="reset">Reset</string>
</resources>